--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 body {
   font-family: Arial, sans-serif;
-  color: #95918A;
+  color: #000;
   background-color: #F9F3E9;
   margin: 0;
   padding: 0;
@@ -21,11 +21,39 @@ header .logo img {
   margin: 0;
 }
 header .language-switch {
-  background-color: #95918A;
-  border: none;
-  padding: 0.5rem 1rem;
+  overflow: hidden;
+  padding: 12px 24px;
+  border-radius: 7px;
+  background-color: white;
+  color: black;
+  position: relative;
+  display: inline-block;
   cursor: pointer;
-  border-radius: 3rem;
+  font-size: 2rem;
+}
+header .language-switch span {
+  position: relative;
+  transition: color 0.6s cubic-bezier(0.53, 0.21, 0, 1);
+}
+header .language-switch:before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: hsl(34, 59%, 71%);
+  transform: scaleX(0);
+  transform-origin: 100% 100%;
+  transition: transform 0.6s cubic-bezier(0.53, 0.21, 0, 1);
+}
+header .language-switch:hover:before {
+  transform-origin: 0 0;
+  transform: scaleX(1);
+}
+header .language-switch:hover span {
+  color: white;
 }
 
 .banner {
@@ -44,13 +72,14 @@ header .language-switch {
 
 .info {
   padding: 2rem;
+  font-size: 2rem;
 }
 .info .address, .info .map, .info .details, .info .images {
   margin-bottom: 1rem;
 }
 footer {
   background-color: #EEE6DC;
-  color: #F9F3E9;
+  color: #000;
   text-align: center;
   padding: 1rem;
 }
