--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,7 +1,7 @@
 // Variables
 $primary-color: #EEE6DC;
 $secondary-color: #95918A;
-$font-color: #95918A;
+$font-color: #000;
 $background-color: #F9F3E9;
 
 // Base styles
@@ -30,13 +30,54 @@ header {
     }
 
     .language-switch {
-        background-color: $secondary-color;
-        border: none;
-        padding: 0.5rem 1rem;
+        // // background-color: $secondary-color;
+        // border: none;
+        // padding: 0.5rem 1rem;
+        // cursor: pointer;
+        // border-radius: 3rem;
+
+        overflow: hidden;
+        padding: 12px 24px;
+        border-radius: 7px;
+        background-color: white;
+        color: black;
+        position: relative;
+        display: inline-block;
         cursor: pointer;
-        border-radius: 3rem;
+        font-size: 2rem;
+
+        span {
+            position: relative;
+            transition: color 0.6s cubic-bezier(0.53, 0.21, 0, 1);
+        }
+
+        &:before {
+            content: "";
+            display: block;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: hsl(34, 59%, 71%);
+            transform: scaleX(0);
+            transform-origin: 100% 100%;
+            transition: transform 0.6s cubic-bezier(0.53, 0.21, 0, 1);
+        }
+
+        &:hover {
+            &:before {
+                transform-origin: 0 0;
+                transform: scaleX(1);
+            }
+
+            span {
+                color: white;
+            }
+        }
     }
 }
+
 
 // nav {
 //     background-color: $secondary-color;
@@ -75,6 +116,7 @@ header {
 
 .info {
     padding: 2rem;
+    font-size: 2rem;
 
     .address, .map, .details, .images {
         margin-bottom: 1rem;
@@ -87,7 +129,7 @@ header {
 
 footer {
     background-color: $primary-color;
-    color: $background-color;
+    color: #000;
     text-align: center;
     padding: 1rem;
 }
