--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,12 @@ body {
   background-color: #F9F3E9;
   margin: 0;
   padding: 0;
+  direction: ltr;
+}
+
+body.arabic {
+  direction: rtl;
+  text-align: right;
 }
 
 header {
@@ -29,11 +35,8 @@ header .language-switch {
   position: relative;
   display: inline-block;
   cursor: pointer;
-  font-size: 2rem;
-}
-header .language-switch span {
-  position: relative;
-  transition: color 0.6s cubic-bezier(0.53, 0.21, 0, 1);
+  font-size: 1.5rem;
+  z-index: 1;
 }
 header .language-switch:before {
   content: "";
@@ -47,13 +50,14 @@ header .language-switch:before {
   transform: scaleX(0);
   transform-origin: 100% 100%;
   transition: transform 0.6s cubic-bezier(0.53, 0.21, 0, 1);
+  z-index: -1;
+}
+header .language-switch:hover {
+  color: white;
 }
 header .language-switch:hover:before {
   transform-origin: 0 0;
   transform: scaleX(1);
-}
-header .language-switch:hover span {
-  color: white;
 }
 
 .banner {
