--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -4,13 +4,18 @@ $secondary-color: #95918A;
 $font-color: #000;
 $background-color: #F9F3E9;
 
-// Base styles
 body {
     font-family: Arial, sans-serif;
     color: $font-color;
     background-color: $background-color;
     margin: 0;
     padding: 0;
+    direction: ltr; // Default to LTR
+}
+
+body.arabic {
+    direction: rtl;
+    text-align: right;
 }
 
 header {
@@ -30,12 +35,6 @@ header {
     }
 
     .language-switch {
-        // // background-color: $secondary-color;
-        // border: none;
-        // padding: 0.5rem 1rem;
-        // cursor: pointer;
-        // border-radius: 3rem;
-
         overflow: hidden;
         padding: 12px 24px;
         border-radius: 7px;
@@ -44,12 +43,8 @@ header {
         position: relative;
         display: inline-block;
         cursor: pointer;
-        font-size: 2rem;
-
-        span {
-            position: relative;
-            transition: color 0.6s cubic-bezier(0.53, 0.21, 0, 1);
-        }
+        font-size: 1.5rem;
+        z-index: 1;  // Ensure button text stays above background
 
         &:before {
             content: "";
@@ -63,6 +58,7 @@ header {
             transform: scaleX(0);
             transform-origin: 100% 100%;
             transition: transform 0.6s cubic-bezier(0.53, 0.21, 0, 1);
+            z-index: -1; // Ensure background stays behind text
         }
 
         &:hover {
@@ -71,12 +67,12 @@ header {
                 transform: scaleX(1);
             }
 
-            span {
-                color: white;
-            }
+            // Text remains visible
+            color: white;
         }
     }
 }
+
 
 
 // nav {
@@ -112,6 +108,12 @@ header {
         width: 100%;
         height: 100%;
     }
+
+    // .eid {
+    //     display: flex;
+    //     position: absolute;
+
+    // }
 }
 
 .info {
