--- a/css/styles.css
+++ b/css/styles.css
@@ -64,14 +64,14 @@ header .language-switch:hover:before {
   background-color: #EEE6DC;
   color: #F9F3E9;
   text-align: center;
-  padding: rem 0;
+  padding: 1rem 0;
 }
 .banner h1 {
   margin: 0;
 }
 .banner img {
   width: 100%;
-  height: 100%;
+  height: auto;
 }
 
 .info {
@@ -86,6 +86,37 @@ footer {
   color: #000;
   text-align: center;
   padding: 1rem;
+}
+
+@media (max-width: 768px) {
+  header {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  header .logo {
+    margin-bottom: 1rem;
+  }
+  header .logo img {
+    width: 3rem;
+  }
+  header .language-switch {
+    font-size: 1rem;
+    padding: 8px 16px;
+  }
+  .banner {
+    padding: 0.5rem 0;
+  }
+  .banner img {
+    height: auto;
+  }
+  .info {
+    padding: 1rem;
+    font-size: 1.5rem;
+  }
+  .info .map iframe {
+    height: 300px;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
