--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -3,6 +3,7 @@ $primary-color: #EEE6DC;
 $secondary-color: #95918A;
 $font-color: #000;
 $background-color: #F9F3E9;
+$mobile-breakpoint: 768px;
 
 body {
     font-family: Arial, sans-serif;
@@ -73,32 +74,11 @@ header {
     }
 }
 
-
-
-// nav {
-//     background-color: $secondary-color;
-//     ul {
-//         display: flex;
-//         list-style-type: none;
-//         margin: 0;
-//         padding: 0;
-
-//         li {
-//             margin: 0 1rem;
-
-//             a {
-//                 color: $background-color;
-//                 text-decoration: none;
-//             }
-//         }
-//     }
-// }
-
 .banner {
     background-color: $primary-color;
     color: $background-color;
     text-align: center;
-    padding: rem 0;
+    padding: 1rem 0;
 
     h1 {
         margin: 0;
@@ -106,14 +86,8 @@ header {
 
     img {
         width: 100%;
-        height: 100%;
+        height: auto; // Maintain aspect ratio
     }
-
-    // .eid {
-    //     display: flex;
-    //     position: absolute;
-
-    // }
 }
 
 .info {
@@ -134,4 +108,46 @@ footer {
     color: #000;
     text-align: center;
     padding: 1rem;
+}
+
+// Media Queries for Responsive Design
+
+@media (max-width: $mobile-breakpoint) {
+    header {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+
+        .logo {
+            margin-bottom: 1rem;
+
+            img {
+                width: 3rem;
+            }
+        }
+
+        .language-switch {
+            font-size: 1rem;
+            padding: 8px 16px;
+        }
+    }
+
+    .banner {
+        padding: 0.5rem 0;
+
+        img {
+            height: auto; // Maintain aspect ratio
+        }
+    }
+
+    .info {
+        padding: 1rem;
+        font-size: 1.5rem;
+
+        .map {
+            iframe {
+                height: 300px; // Adjust map height for mobile
+            }
+        }
+    }
 }
