--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -98,9 +98,9 @@ header {
         margin-bottom: 1rem;
     }
 
-    .map-pin-icon {
-        // Add icon styles here
-    }
+    // .map-pin-icon {
+    //     // Add icon styles here
+    // }
 }
 
 footer {
